# BlackFox

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: BFBootstrap.cpp  BFTypeDefs.h  BFUtils.cpp  BFUtils.h  CMakeLists.txt  main.cpp
src/blackfox/: CMakeLists.txt
src/blackfox/boot/: BFBootstrap.cpp  BFBootstrap.h  BFBootstrap.inl  CMakeLists.txt
src/blackfox/common/: BFDebug.h  BFExport.h  BFNonCopyable.h  BFSingleton.h  BFTypeDefs.h  BFUtils.h
src/blackfox/core/: BFApplication.cpp  BFApplication.h  BFApplicationArgs.cpp  BFApplicationArgs.h  BFCommandManager.cpp  BFCommandManager.h  BFEngineConfig.cpp  BFEngineConfig.h  BFGame.cpp  BFGame.h  BFInput.cpp  BFInput.h  BFQuitApplicationCommand.cpp  BFQuitApplicationCommand.h  BFScene.h  BFVirtualFileInputStream.cpp  BFVirtualFileInputStream.h  BFVirtualFileSystem.cpp  BFVirtualFileSystem.h  IBFApplicationModule.cpp  IBFApplicationModule.h  IBFCommand.h
src/blackfox/data/: BFConfigData.h  BFFontResourceLoader.cpp  BFFontResourceLoader.h  BFResourceLoader.h  BFResourcesHolder.cpp  BFResourcesHolder.h  BFTextureResourceLoader.cpp  BFTextureResourceLoader.h
src/blackfox/entities/: BFComponent.h  BFComponentListener.h  BFComponentSystem.cpp  BFComponentSystem.h  BFComponentSystemEnums.cpp  BFComponentSystemFlags.cpp  BFComponentSystemFlags.h  BFComponentSystemMacros.h  BFEntityArchetype.cpp  BFEntityArchetype.h  BFWorld.cpp  BFWorld.h
src/blackfox/installers/: BFBaseContext.cpp  BFBaseContext.h  BFBaseInstaller.cpp  BFBaseInstaller.h  BFCoreInstaller.cpp  BFCoreInstaller.h  BFDataInstaller.cpp  BFDataInstaller.h  BFEntitiesInstaller.h  BFMainContext.cpp  BFMainContext.h  BFSceneContext.cpp  BFSceneContext.h  BFSceneInstaller.cpp  BFSceneInstaller.h  BFScriptingInstaller.cpp  BFServicesInstaller.cpp  BFServicesInstaller.h  IBFContext.h  IBFInstaller.h
src/blackfox/io/: BFIniFile.h  BFLuaScript.cpp  BFLuaScript.h  BFResource.cpp  BFResource.h  BFResourceTypes.h  BFTextResource.cpp  BFTextResource.h  BFYamlFile.h
src/blackfox/math/: BFDegree.cpp  BFDegree.h  BFRadian.h  BFVector2.cpp  BFVector2.h
src/blackfox/modules/: CMakeLists.txt
src/blackfox/physics/: BFContactFilter.h  BFPhysicsData.h  BFRayCast.cpp  BFRayCast.h
src/blackfox/resources/: BFIniFile.cpp  BFIniFile.h  BFLuaScript.h  BFResource.cpp  BFResource.h  BFResource.inl  BFResourceLoader.h  BFResourceTypes.cpp  BFResourceTypes.h  BFResourcesHolder.cpp  BFResourcesHolder.h  BFResourcesMetaData.cpp  BFResourcesMetaData.h  BFResourcesUtils.h  BFTextResource.cpp  BFTextResource.h  BFTextResourceLoader.h  BFTextureResourceLoader.h  BFYamlFile.cpp  BFYamlFile.h
src/blackfox/scripting/: BFScriptingManager.cpp  BFScriptingManager.h  IBFScriptingEntity.cpp  IBFScriptingEntity.h
src/blackfox/services/: BFCreateDefaultWorldService.cpp  BFCreateDefaultWorldService.h  BFScriptingService.cpp  BFScriptingService.h  IBFApplicationService.cpp  IBFApplicationService.h  IBFService.h
src/blackfox/utils/: BFColorUtils.cpp  BFColorUtils.h  BFStringUtils.cpp  BFStringUtils.h
src/common/: BFCommand.h  BFDebug.h  BFExport.h  BFNonCopyable.h  BFSingleton.h  BFTypeDefs.h  BFUtils.h  CMakeLists.txt  IBFCommand.h
src/core/: BFApplication.cpp  BFApplication.h  BFBootstrap.cpp  BFBootstrap.h  BFCommand.h  BFCommandManager.cpp  BFCommandManager.h  BFDebug.h  BFInput.cpp  BFInput.h  BFLevel.cpp  BFLevel.h  BFNonCopyable.h  BFQuitApplicationCommand.cpp  BFQuitApplicationCommand.h  BFScene.cpp  BFScene.h  BFScriptingManager.cpp  BFScriptingManager.h  BFSingleton.h  ScriptingManager.cpp  ScriptingManager.h
src/data/: BFConfigData.h  BFResourcesHolder.cpp  BFResourcesHolder.h  BFTextureResourceLoader.h
src/editor/: BFEditorApplication.cpp  BFEditorApplication.h  BFEditorBootstrap.cpp  BFEditorBootstrap.h  CMakeLists.txt  main.cpp
src/editor/commands/: BFCloseProjectCommand.cpp  BFCloseProjectCommand.h  BFCreateProjectCommand.cpp  BFCreateProjectCommand.h  BFLoadProjectCommand.cpp  BFLoadProjectCommand.h  BFOpenFileCommand.cpp  BFOpenFileCommand.h  BFQuitEditorCommand.cpp  BFQuitEditorCommand.h  BFSelectSceneCommand.cpp  BFSelectSceneCommand.h  BFWindowCommand.h
src/editor/contexts/: BFEditorContext.cpp  BFEditorContext.h
src/editor/core/: BFDataManager.cpp  BFDataManager.h  BFEditorApplication.cpp  BFEditorApplication.h  BFQuitEditorCommand.h  BFWindowManager.cpp  BFWindowManager.h
src/entities/: BFComponent.h  BFComponentSystem.cpp  BFComponentSystem.h  BFComponentSystemFlags.h  BFComponentSystemMacros.h  BFWorld.cpp  BFWorld.h
src/game/: BFBootstrap.cpp  BFBootstrap.h  CMakeLists.txt  main.cpp
src/installers/: BFBaseContext.cpp  BFBaseContext.h  BFBaseInstaller.cpp  BFBaseInstaller.h  BFCoreInstaller.cpp  BFCoreInstaller.h  BFDataInstaller.cpp  BFDataInstaller.h  BFEntitiesInstaller.cpp  BFEntitiesInstaller.h  BFLevelContext.cpp  BFLevelContext.h  BFLevelInstaller.cpp  BFLevelInstaller.h  BFMainContext.cpp  BFMainContext.h  BFSceneContext.cpp  BFSceneContext.h  BFSceneInstaller.cpp  BFSceneInstaller.h  BFScriptingInstaller.h  IBFContext.h  IBFInstaller.h
src/io/: BFIniFile.cpp  BFIniFile.h  BFLuaScript.cpp  BFLuaScript.h  BFResource.cpp  BFResource.h  BFResourceTypes.cpp  BFResourceTypes.h  BFTextResource.cpp  BFTextResource.h  BFYamlFile.h  CMakeLists.txt
src/math/: BFDegree.cpp  BFDegree.h  BFMath.cpp  BFMath.h  BFRadian.cpp  BFRadian.h  BFVector2.cpp  BFVector2.h  CMakeLists.txt
src/scripting/: BFScriptingManager.cpp  BFScriptingManager.h  IBFScriptingEntity.h
src/systems/: BFComponentSystem.cpp  BFComponentSystem.h
src/test/: CMakeLists.txt
test_example/: CMakeLists.txt  project.yaml
test_example/data/: ScalePingPongSystem.lua  TestSystem.lua  config.ini  test.lua
test_example/src/: TestGame.cpp  TestGame.h  main.cpp
thirdParties/: CMakeLists.txt
thirdParties/SDL2_gfx_1.0.4/: CMakeLists.txt
thirdParties/imgui-sfml/: CMakeLists.txt  imconfig-SFML.h  imgui-SFML.cpp
thirdParties/lua-5.3.5/: CMakeLists.txt
thirdParties/physfs-cpp/: CMakeLists.txt
thirdParties/yaml-convert/: CMakeLists.txt  yaml-convert.h
(+299 files in other folders)
